Notebook atualizado para funcionar sem que seja necessário o usuário fazer qualquer upload

--- a/VanGogh_se.ipynb
+++ b/VanGogh_se.ipynb
@@ -33,10 +33,14 @@
         "colab": {}
       },
       "source": [
-        "!bash -c 'rm -rf /content/sample_data'\n",
+        "!bash -c 'rm -rf /content/*'\n",
         "!bash -c 'mkdir /content/vangogh'\n",
         "!bash -c 'mkdir /content/vangogh_results'\n",
-        "!bash -c 'mkdir /content/photos'"
+        "!bash -c 'mkdir /content/photos'\n",
+        "!wget -O /content/photos/example.jpeg https://github.com/FabioRick/vangogh-se/releases/download/dataset-v0.1/example.jpeg\n",
+        "!wget -O /content/images.zip https://github.com/FabioRick/vangogh-se/releases/download/dataset-v0.1/images.zip\n",
+        "!unzip /content/images.zip -d /content/vangogh\n",
+        "!bash -c 'rm -rf /content/images.zip'\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,10 +98,9 @@
         "import random\n",
         "from keras.applications import vgg16\n",
         "from keras import backend as K\n",
-        "from IPython.display import display, Javascript\n",
+        "from IPython.display import display, Javascript, Image\n",
         "from google.colab.output import eval_js\n",
-        "from base64 import b64decode\n",
-        "from IPython.display import Image"
+        "from base64 import b64decode"
       ],
       "execution_count": 0,
       "outputs": []
@@ -109,7 +112,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Populando parâmetros"
+        "## Populando parâmetros iniciais\n"
       ]
     },
     {
@@ -148,7 +151,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Funções de utilidade sendo definidas"
+        "## Funções de processamento de imagem"
       ]
     },
     {
@@ -237,11 +240,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uTIbHbKW2WlD",
+        "id": "Jf43PbZirGco",
         "colab_type": "text"
       },
       "source": [
-        "## Mais funções de utilidade sendo definidas"
+        "## Definindo utilitários para a execução do modelo\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -313,16 +318,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HeKb71Lc2pgO",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Mais parâmetros do modelo sendo definido"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "qBeuLC622vqP",
@@ -365,16 +360,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Kctu2wHx3A_S",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Mais funções de utilidades definida"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "9Dv9MRd73D1V",
@@ -397,16 +382,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "caDu_MTW3HL3",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Definindo classe Evaluator para tornar mais eficiente os calculos de perda e as funções gradiente"
-      ]
     },
     {
       "cell_type": "code",
@@ -498,8 +473,9 @@
         "colab": {}
       },
       "source": [
-        "display(Image(base_image_path))\n",
-        "display(Image(fname))"
+        "display(Image(base_image_path, height=400))\n",
+        "display(Image(style_reference_image_path, height=200))\n",
+        "display(Image(fname, height=400))"
       ],
       "execution_count": 0,
       "outputs": []
