Melhora a visualização/entendimento do resultado do notebook

--- a/VanGogh_se.ipynb
+++ b/VanGogh_se.ipynb
@@ -473,9 +473,12 @@
         "colab": {}
       },
       "source": [
-        "display(Image(base_image_path, height=400))\n",
-        "display(Image(style_reference_image_path, height=200))\n",
-        "display(Image(fname, height=400))"
+        "print(\"Foto:\")\n",
+        "display(Image(base_image_path, width=200))\n",
+        "print(\"Estilo:\")\n",
+        "display(Image(style_reference_image_path, width=200))\n",
+        "print(\"Resultado:\")\n",
+        "display(Image(fname, width=200))"
       ],
       "execution_count": 0,
       "outputs": []
