Atualizando texto do notebook

--- a/VanGogh_se.ipynb
+++ b/VanGogh_se.ipynb
@@ -222,7 +222,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Carregando modelo já treinado para transferência de"
+        "### Carregando módulo do tensorflow hub para transferência de estilo"
       ]
     },
     {
@@ -245,7 +245,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Rodando o modelo e visualizando o resultado"
+        "Rodando o módulo e visualizando o resultado"
       ]
     },
     {
